Fixed the page titles

--- a/bd2.html
+++ b/bd2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Final Fantasy V Job Fair</title>
+        <title>Bravely Default II Job Fair</title>
         <style type='text/css'>
             body {
                 font-family: Roboto, sans-serif;
