--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bravely Default II Job Fair</title>
+        <title>Final Fantasy V Job Fair</title>
         <style type='text/css'>
             body {
                 font-family: Roboto, sans-serif;
