Fixed a line wrap

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <label><input id='opt-mime' type='checkbox'>Allow Mime</label>
                 <label><input id='opt-white-mage' type='checkbox'>Guarantee White Mage</label>
                 <label><input id='opt-gba' type='checkbox'>Allow GBA Only Jobs</label>
-                <label><input id='opt-early' type='checkbox'>Force One Wind/Water Job</label>
+                <label><input id='opt-early' type='checkbox'>Force Wind/Water Job</label>
             </div>
         </div>
         <div id='button-holder'><button id='get-jobs'>Employ Me!</button></div>
